--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     This site was developed by academics 
                     of information 
                     systems in order to inform foreigners about important 
-                    locations in our city
+                    locations in our city.<br>
+                    So with the idea of help, let's show you some points in the city, 
+                    such as education, safety, health and leisure
                 </p>
             </div>
             <div class="img">
